feat: add android-studio alias and keybind

--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -7,3 +7,4 @@
 # Custom
 bind = Super, B, exec, firefox
 bind = Super, Print, exec, grim -g "$(slurp -d)" - | tee ~/Pictures/Screenshots/$(date +%s).png | wl-copy && notify-send "Screenshot" "Saved to ~/Pictures/Screenshots"
+bind = Super, A, exec, set -x QT_QPA_PLATFORM xcb; set -x AWT_TOOLKIT WLToolkit; /opt/android-studio/bin/studio
