feat: add noblur to mpv player

--- a/.config/hypr/custom/rules.conf
+++ b/.config/hypr/custom/rules.conf
@@ -4,3 +4,4 @@
 
 windowrule = match:class libreoffice-impress, no_blur on
 windowrule = match:class libreoffice-impress, opacity 1.0 override 1.0 override
+windowrule = match:class .*mpv$, opacity 1.0 override 1.0 override
